--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
@@ -45,11 +45,13 @@
     "@tiptap/starter-kit": "^3.5.1",
     "@types/node": "^24.5.2",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
     "dayjs": "^1.11.18",
     "dompurify": "^3.2.7",
+    "eventsource-parser": "^3.0.6",
     "file-saver": "^2.0.5",
     "fuse.js": "^7.1.0",
     "he": "^1.2.0",
@@ -57,12 +59,15 @@
     "html2canvas-pro": "^1.5.11",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "immer": "^10.1.3",
     "jspdf": "^3.0.3",
     "katex": "^0.16.22",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.544.0",
     "marked": "^16.3.0",
     "marked-react": "^3.0.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^6.2.0",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-history": "^1.4.1",
