--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,7 @@
       "correctness": {
         "noUnusedImports": "error",
         "noUnusedVariables": "error",
-        "useExhaustiveDependencies": "off",
+        "useExhaustiveDependencies": "warn",
         "useUniqueElementIds": "off"
       },
       "suspicious": {
