--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/react-dom": "^19.1.9",
     "@types/turndown": "^5.0.5",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "typescript": "~5.8.3",
